--- a/pages/breathing.html
+++ b/pages/breathing.html
@@ -1,18 +1,101 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Respiración</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Respiración</h1>
+      <h1>Respiración 3–6–3 en ejercicios isométricos</h1>
     </header>
+
     <main>
-        <p>El contenido de la sección «Respiración» se añadirá más adelante.</p>
+      <section>
+        <h2>Descripción general</h2>
+        <p>
+          Esta técnica de respiración se utiliza
+          <strong>dentro de los ejercicios isométricos</strong>
+          (tensiones estáticas, “desgarros”, posiciones de fuerza, apoyos,
+          etc.). Su objetivo es entrar en la tensión mediante la respiración,
+          mantener el pico de esfuerzo con un flujo de aire controlado y salir
+          sin romper la postura.
+        </p>
+      </section>
+
+      <section>
+        <h2>Posición inicial</h2>
+        <p>
+          • Adopta la posición isométrica necesaria: apoyo, estiramiento
+          estático, “desgarro”, sentadilla sostenida, etc.<br />
+          • Cuerpo firme, columna alineada según la técnica del ejercicio.<br />
+          • Hombros abajo, cuello sin tensión excesiva.<br />
+          • Labios cerrados para poder exhalar por una salida estrecha y
+          controlada.
+        </p>
+      </section>
+
+      <section>
+        <h2>Un ciclo de respiración (3–6–3)</h2>
+
+        <h3>1. Entrada en la tensión — 3 segundos</h3>
+        <p>
+          Inhala por la nariz de forma profunda pero breve. Durante estos 3
+          segundos incrementa la tensión de las zonas objetivo, sin tirones ni
+          bloqueos de aire. Al final de esta fase ya estás casi en tu máximo de
+          forma controlada.
+        </p>
+
+        <h3>2. Pico de tensión + exhalación fuerte — 3 a 6 segundos</h3>
+        <p>
+          Mantén la tensión máxima segura en la postura. Empieza a exhalar
+          lentamente por labios bien cerrados, como si soplaras a través de un
+          tubo estrecho. Durante 3 segundos (nivel básico) o hasta 6 segundos
+          (nivel avanzado), sostén el esfuerzo sin perder forma, sin temblores
+          excesivos y manteniendo la cara y el cuello relativamente relajados.
+        </p>
+
+        <h3>3. Salida de la tensión — 3 segundos</h3>
+        <p>
+          Al terminar la exhalación, libera la tensión de forma progresiva
+          durante 3 segundos. No “sueltas” la postura de golpe, sino que la
+          abandonas suavemente o pasas a una variante más ligera según el
+          ejercicio.
+        </p>
+      </section>
+
+      <section>
+        <h2>Niveles de carga</h2>
+
+        <h3>Nivel básico</h3>
+        <p>
+          • Esquema: <strong>3–3–3</strong> (entrada — pico — salida).<br />
+          • Intensidad del pico: ~70% del esfuerzo máximo subjetivo.<br />
+          • Realiza <strong>5 a 7 ciclos</strong> por ejercicio.
+        </p>
+
+        <h3>Nivel avanzado</h3>
+        <p>
+          • Esquema: <strong>3–6–3</strong>.<br />
+          • Intensidad del pico: 80–90%, sin perder control ni técnica.<br />
+          • Realiza <strong>8 a 10 ciclos</strong> según tu estado físico.
+        </p>
+      </section>
+
+      <section>
+        <h2>Seguridad</h2>
+        <p>
+          • Se recomienda realizar esta respiración <strong>en ayunas</strong> o
+          al menos 2–3 horas después de comer, especialmente en isometrías
+          intensas del tronco.<br />
+          • Si aparecen luces en la vista, presión en la cabeza, mareos o ruido
+          en los oídos, reduce la tensión o acorta la fase de exhalación.<br />
+          • No utilizamos una retención dura del aire con los pulmones llenos;
+          el aire debe salir de forma continua durante el pico de tensión.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
