--- a/pages/day11.html
+++ b/pages/day11.html
@@ -1,18 +1,386 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 11</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 11</h1>
+      <h1>Día 11</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 11 se añadirá más adelante.</p>
+      <!-- 1. Extensión profunda de cuello y mandíbula desde rodillas -->
+      <section>
+        <h2>1. Extensión profunda de cuello y mandíbula desde rodillas</h2>
+        <img
+          src="../img/day11/1.1.jpg"
+          alt="Extensión del cuello y apertura de la mandíbula desde la posición de rodillas"
+        />
+        <p>
+          Arrodíllate y siéntate sobre los pies. Si la movilidad de los tobillos
+          aún no es suficiente, puedes mantener los dedos de los pies apoyados
+          en el suelo; la forma ideal es con los empeines completamente
+          apoyados. Desde ahí reclina el torso hacia atrás y apoya las manos en
+          los talones. Lleva la cabeza al máximo hacia atrás.
+        </p>
+        <p>
+          Abre la boca tan ampliamente como puedas y ciérrala de nuevo con la
+          misma tensión, sin cambiar la posición del cuerpo. Realiza
+          <strong>10 aperturas y cierres</strong> de la mandíbula en esta
+          posición, sintiendo cómo trabajan el cuello y la musculatura alrededor
+          de la cara. Después vuelve con cuidado hacia adelante, inclina la
+          cabeza y pega la barbilla al pecho, manteniendo el estiramiento de la
+          parte posterior del cuello durante <strong>10&nbsp;segundos</strong>.
+          Este ciclo cuenta como una repetición. Completa
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 2. Isometría de cuello con almohada bajo el mentón -->
+      <section>
+        <h2>2. Isometría de cuello con almohada bajo el mentón</h2>
+        <img
+          src="../img/day11/2.1.jpg"
+          alt="Trabajo isométrico de cuello con almohada bajo el mentón"
+        />
+        <p>
+          Coloca una almohada o una toalla enrollada entre el mentón y la parte
+          alta del pecho. La boca permanece cerrada, pero sin apretar los
+          dientes. Sujeta la almohada con ambas manos y tira de ella hacia abajo
+          con fuerza, mientras el mentón se opone y no permite que el objeto se
+          deslice.
+        </p>
+        <p>
+          La tensión debe sentirse en la parte frontal del cuello y en los
+          músculos cervicales profundos, no en la mandíbula. Mantén la posición
+          durante <strong>10&nbsp;segundos</strong>, respira con calma, relaja
+          brevemente y repite. Realiza <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 3. Elevaciones de espalda con pausa isométrica (solo torso) -->
+      <section>
+        <h2>3. Elevaciones de espalda con pausa isométrica (solo torso)</h2>
+        <img
+          src="../img/day11/3.1.jpg"
+          alt="Elevación del torso boca abajo con manos detrás de la cabeza"
+        />
+        <p>
+          Túmbate boca abajo sobre la esterilla con las piernas estiradas y los
+          pies apoyados en el suelo. Coloca las manos detrás de la cabeza, con
+          los codos abiertos hacia los lados. Desde esta posición eleva el
+          pecho, los hombros y la parte superior del torso lo más que puedas,
+          manteniendo las piernas en el suelo pero activas y estiradas.
+        </p>
+        <p>
+          No busques altura a costa de arquear la zona lumbar: la sensación
+          principal debe estar en la parte alta de la espalda y entre las
+          escápulas. En la posición alta haz una pausa isométrica de
+          <strong>10&nbsp;segundos</strong>, respirando de forma tranquila y sin
+          relajar la tensión. Después baja de forma controlada. Realiza
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 4. Inclinaciones hacia los pies -->
+      <section>
+        <h2>4. Inclinaciones hacia los pies</h2>
+        <img
+          src="../img/day11/4.1.jpg"
+          alt="Inclinación hacia los pies con piernas rectas"
+        />
+        <p>
+          Colócate de pie con los pies al ancho de las caderas y las piernas
+          completamente rectas. Desde esta posición inclina el torso hacia
+          adelante empujando la cadera hacia atrás, no hacia abajo, y baja las
+          manos hacia el suelo o los pies.
+        </p>
+        <p>
+          Debes sentir un estiramiento profundo en la parte posterior de las
+          piernas y la espalda. Después vuelve a erguirte estirando la columna
+          vértebra por vértebra. Realiza
+          <strong>10 repeticiones</strong> sin rebotes y sin doblar las
+          rodillas.
+        </p>
+      </section>
+
+      <!-- 5. Peso muerto isométrico bloqueado -->
+      <section>
+        <h2>5. Peso muerto isométrico bloqueado</h2>
+        <img
+          src="../img/day11/5.1.jpg"
+          alt="Peso muerto isométrico con manos apoyadas sobre las piernas"
+        />
+        <p>
+          Ponte de pie con los pies al ancho de los hombros y las rodillas
+          ligeramente flexionadas. Inclina el torso hacia adelante manteniendo
+          la espalda recta y firme, sin redondearla. Coloca las manos justo por
+          encima de las rodillas o en la parte alta de las tibias, creando un
+          punto de anclaje.
+        </p>
+        <p>
+          Desde esta posición intenta levantar el torso hacia arriba como si
+          fueras a iniciar un peso muerto real, pero las manos bloquean el
+          movimiento y no te permiten subir. Se crea así una fuerte tensión
+          isométrica en la zona lumbar, glúteos e isquiotibiales. Mantén la
+          contracción durante <strong>10&nbsp;segundos</strong> y repite
+          <strong>10 veces</strong>, respirando de forma tranquila.
+        </p>
+      </section>
+
+      <!-- 6. “Aplastar el coco” entre las escápulas -->
+      <section>
+        <h2>6. “Aplastar el coco” entre las escápulas</h2>
+        <img
+          src="../img/day11/6.1.jpg"
+          alt="Isometría de la parte media de la espalda con manos entrelazadas detrás"
+        />
+        <p>
+          Ponte de pie con la espalda recta y los pies al ancho de las caderas.
+          Entrelaza las manos detrás de la espalda, justo por encima de la
+          cintura, y lleva los codos hacia atrás y ligeramente hacia afuera.
+          Imagina que tienes un coco entre las escápulas y que debes no solo
+          sujetarlo, sino romperlo usando la fuerza de la parte media y alta de
+          la espalda.
+        </p>
+        <p>
+          La clave es cerrar las escápulas hacia adentro sin arquear la zona
+          lumbar ni levantar los hombros. Mantén la contracción máxima durante
+          <strong>10&nbsp;segundos</strong>, relaja brevemente y repite
+          <strong>10 veces</strong>.
+        </p>
+      </section>
+
+      <!-- 7. Isometría del deltoides anterior -->
+      <section>
+        <h2>7. Isometría del deltoides anterior</h2>
+        <img
+          src="../img/day11/7.1.jpg"
+          alt="Isometría del deltoides anterior con agarre del antebrazo"
+        />
+        <p>
+          Colócate de pie con una pierna adelantada para mayor estabilidad y el
+          brazo de trabajo ligeramente flexionado frente al cuerpo. Con la mano
+          contraria sujeta el antebrazo o la muñeca del brazo de trabajo creando
+          un bloqueo firme.
+        </p>
+        <p>
+          El brazo de trabajo intenta salir hacia adelante y ligeramente hacia
+          arriba, mientras la mano de apoyo no le permite avanzar ni un
+          milímetro. La tensión debe concentrarse en el deltoides anterior, en
+          la parte frontal del hombro. Mantén la contracción durante
+          <strong>10&nbsp;segundos</strong> y repite
+          <strong>10 veces por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 8. Isometría para el deltoides posterior -->
+      <section>
+        <h2>8. Isometría para el deltoides posterior</h2>
+        <img
+          src="../img/day11/8.1.jpg"
+          alt="Isometría del deltoides posterior abrazando el codo"
+        />
+        <p>
+          Coloca el brazo de trabajo frente al cuerpo y abrázalo con la otra
+          mano sujetando firmemente el codo o el antebrazo. El brazo de trabajo
+          intenta llevar el codo hacia atrás y hacia afuera, mientras la mano
+          que abraza impide por completo el movimiento.
+        </p>
+        <p>
+          La tensión isométrica se concentra en el deltoides posterior, la parte
+          alta de la espalda y la zona interescapular. Mantén la contracción
+          durante <strong>10&nbsp;segundos</strong> y repite
+          <strong>10 veces por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 9. Rotación interna del hombro con toalla -->
+      <section>
+        <h2>9. Rotación interna del hombro con toalla</h2>
+        <img
+          src="../img/day11/9.1.jpg"
+          alt="Estiramiento con toalla detrás de la cabeza para la zona bajo la escápula"
+        />
+        <p>
+          Toma una toalla o cinturón que <strong>no se estire</strong> y pásalo
+          detrás de la espalda, con un brazo arriba detrás de la cabeza y el
+          otro abajo cerca de la cintura. La mano de arriba tira hacia arriba y
+          la mano de abajo tira hacia abajo, ajustando la posición hasta que la
+          tensión se sienta debajo de la escápula, no en el tríceps.
+        </p>
+        <p>
+          Mantén el pecho abierto y los hombros alejados de las orejas. Conserva
+          la tensión durante <strong>10&nbsp;segundos</strong>, descansa
+          <strong>5&nbsp;segundos</strong> y cambia la posición de los brazos.
+          Repite hasta completar <strong>10 repeticiones</strong> alternando
+          arriba y abajo.
+        </p>
+      </section>
+
+      <!-- 10. Fondos con piernas elevadas en superficie paralela -->
+      <section>
+        <h2>10. Fondos con piernas elevadas en superficie paralela</h2>
+        <img
+          src="../img/day11/10.1.jpg"
+          alt="Fondos con piernas rectas y elevadas"
+        />
+        <p>
+          Colócate entre dos taburetes, barras paralelas o cualquier soporte
+          firme que permita apoyar las manos a los lados del cuerpo. Extiende
+          las piernas al frente y rectas, manteniendo el cuerpo en una línea
+          rígida. Desde esta posición baja el cuerpo flexionando los codos hacia
+          atrás, sin dejar que los hombros colapsen, y luego empuja hacia arriba
+          hasta volver a la posición inicial sin bloquear los codos.
+        </p>
+        <p>
+          El movimiento es corto, controlado y muy tenso, con una fuerte
+          activación del tríceps, deltoides y pecho inferior. Mantén las piernas
+          elevadas durante todo el ejercicio y realiza
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 11. Flexiones -->
+      <section>
+        <h2>11. Flexiones clásicas</h2>
+        <img
+          src="../img/day11/11.1.jpg"
+          alt="Posición inicial de flexiones clásicas en el suelo"
+        />
+        <p>
+          Colócate en posición de plancha con las manos apoyadas en el suelo a
+          la anchura de los hombros y el cuerpo formando una línea recta desde
+          la cabeza hasta los talones. Desde ahí dobla los codos hacia atrás y
+          baja el pecho hacia el suelo en aproximadamente
+          <strong>4&nbsp;segundos</strong>, manteniendo el abdomen y los glúteos
+          tensos.
+        </p>
+        <p>
+          Empuja el suelo y sube en
+          <strong>1&nbsp;segundo</strong> hasta casi extender los brazos, sin
+          bloquear los codos. Realiza <strong>10 flexiones</strong>. Si es
+          demasiado difícil, apoya las rodillas manteniendo el cuerpo en línea
+          recta desde las rodillas hasta la cabeza.
+        </p>
+      </section>
+
+      <!-- 12. Rotura en tres puntos con toalla -->
+      <section>
+        <h2>12. Rotura en tres puntos con toalla</h2>
+        <img
+          src="../img/day11/12.1.jpg"
+          alt="Tensión con toalla al frente a la altura del pecho"
+        />
+        <img
+          src="../img/day11/12.2.jpg"
+          alt="Tensión con toalla por encima de la cabeza"
+        />
+        <img
+          src="../img/day11/12.3.jpg"
+          alt="Tensión con toalla hacia abajo frente a los muslos"
+        />
+        <p>
+          Utiliza una toalla, cinturón de kimono o cinta que
+          <strong>no se estire</strong>. Sujétala con ambas manos dejando unos
+          40–50&nbsp;cm entre ellas. Trabajarás en tres posiciones: con los
+          brazos al frente a la altura del pecho, por encima de la cabeza y
+          abajo frente a los muslos.
+        </p>
+        <p>
+          En cada posición intenta “romper” la toalla tirando con la máxima
+          fuerza hacia los lados. Usa el esquema de
+          <strong>3–6–3&nbsp;segundos</strong>: entra en la tensión durante 3
+          segundos, mantén la contracción máxima 6&nbsp;segundos y libera la
+          fuerza de forma controlada durante otros 3&nbsp;segundos. Pasa
+          enseguida a la siguiente posición. Las tres posiciones consecutivas
+          cuentan como un ciclo. Completa <strong>10 ciclos</strong>.
+        </p>
+      </section>
+
+      <!-- 13. Colgamientos parciales con apoyo en los pies -->
+      <section>
+        <h2>13. Colgamientos parciales con apoyo en los pies</h2>
+        <img
+          src="../img/day11/13.1.jpg"
+          alt="Colgamiento parcial con apoyo de los pies"
+        />
+        <p>
+          Agarra una barra o cualquier soporte sólido que no pueda romperse. No
+          cuelgues todo tu peso como en una dominada: deja parte del peso sobre
+          los pies para mantener un estiramiento seguro y controlado. Relaja los
+          hombros y permite que la columna se alargue de forma natural; si es
+          posible, inclina ligeramente la pelvis hacia adelante para mejorar la
+          descompresión de la espalda. Mantén la posición durante
+          <strong>10&nbsp;segundos</strong> y repite <strong>10 veces</strong>.
+        </p>
+      </section>
+
+      <!-- 14. Inclinaciones hacia los pies (repetición) -->
+      <section>
+        <h2>14. Inclinaciones hacia los pies (repetición)</h2>
+        <img
+          src="../img/day11/14.1.jpg"
+          alt="Repetición de inclinación hacia los pies con piernas rectas"
+        />
+        <p>
+          Repite el mismo ejercicio de inclinaciones del punto 4: de pie, con
+          las piernas rectas, inclina el torso hacia adelante empujando la
+          cadera hacia atrás y baja las manos hacia los pies o el suelo. Vuelve
+          a la posición erguida estirando la columna vértebra por vértebra.
+          Realiza <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 15. Saltos en posición de plancha -->
+      <section>
+        <h2>15. Saltos en posición de plancha</h2>
+        <img
+          src="../img/day11/15.1.jpg"
+          alt="Plancha antes del salto hacia adelante"
+        />
+        <img
+          src="../img/day11/15.2.jpg"
+          alt="Transición del salto desde la plancha"
+        />
+        <p>
+          Comienza en posición de plancha con los brazos extendidos y el abdomen
+          firme. Desde ahí salta con ambos pies hacia adelante, acercando las
+          rodillas al pecho, y luego salta de nuevo hacia atrás para volver a la
+          plancha. Mantén la cadera estable y evita que la zona lumbar se hunda.
+          Realiza <strong>10 repeticiones</strong> con un ritmo elástico y
+          continuo.
+        </p>
+      </section>
+
+      <!-- 16. Burpees sin flexiones -->
+      <section>
+        <h2>16. Burpees sin flexiones</h2>
+        <img
+          src="../img/day11/16.1.jpg"
+          alt="Inicio del burpee sin flexión en plancha"
+        />
+        <img
+          src="../img/day11/16.2.jpg"
+          alt="Transición del burpee sin flexión con pies adelantados"
+        />
+        <img
+          src="../img/day11/16.3.jpg"
+          alt="Salto vertical del burpee sin flexión"
+        />
+        <p>
+          Colócate en posición de plancha con las manos bajo los hombros y el
+          cuerpo en línea recta. Desde ahí salta llevando los pies hacia
+          adelante cerca de las manos y, sin detenerte, realiza un pequeño salto
+          vertical con el cuerpo erguido. Aterriza suave, vuelve a colocar las
+          manos en el suelo y salta hacia atrás a la plancha. Este ciclo cuenta
+          como una repetición. Completa <strong>10 repeticiones</strong>.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
