--- a/pages/day12.html
+++ b/pages/day12.html
@@ -1,18 +1,201 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Día 12</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Día 12 – Brazos y hombros</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>Día 12</h1>
+      <h1>Día 12 – Brazos y hombros</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 12 se añadirá más adelante.</p>
+      <!-- 1. Flexión isométrica de bíceps con la propia mano -->
+      <section>
+        <h2>1. Flexión isométrica de bíceps con la propia mano</h2>
+        <img
+          src="../img/day12/1.1.jpg"
+          alt="Flexión isométrica de bíceps empujando la mano contra la otra"
+        />
+        <p>
+          Coloca una mano sobre la otra como si la mano inferior fuera una pesa.
+          La mano de trabajo (la de abajo) intenta flexionarse hacia arriba como
+          en un curl de bíceps, mientras la mano de arriba empuja hacia abajo y
+          no deja que el brazo se mueva. Mantén el codo pegado al cuerpo, el
+          hombro relajado y la tensión concentrada en el bíceps, sin balancear
+          el torso. Alterna brazos en cada repetición hasta completar
+          <strong>10 repeticiones por lado</strong>.
+        </p>
+      </section>
+
+      <!-- 2. Bíceps isométrico con el brazo casi extendido -->
+      <section>
+        <h2>2. Bíceps isométrico con el brazo casi extendido</h2>
+        <img
+          src="../img/day12/2.1.jpg"
+          alt="Bíceps isométrico con el brazo casi extendido hacia abajo"
+        />
+        <p>
+          Coloca el brazo de trabajo casi completamente extendido hacia abajo,
+          dejando un pequeño ángulo en el codo. Con la otra mano sujeta el
+          antebrazo o la muñeca y empuja hacia abajo mientras el brazo de
+          trabajo intenta flexionarse hacia arriba. La tensión debe concentrarse
+          en el bíceps, sin perder la alineación del hombro. Mantén la
+          contracción durante unos segundos y repite
+          <strong>10 veces por cada brazo</strong>.
+        </p>
+      </section>
+
+      <!-- 3. Supinación isométrica con variación de ángulos (con agarre de tela) -->
+      <section>
+        <h2>
+          3. Supinación isométrica con variación de ángulos (con agarre de tela)
+        </h2>
+        <img
+          src="../img/day12/3.1.jpg"
+          alt="Pose frontal de bíceps con supinación y agarre de tela"
+        />
+        <img
+          src="../img/day12/3.2.jpg"
+          alt="Pose lateral de bíceps con supinación"
+        />
+        <img
+          src="../img/day12/3.3.jpg"
+          alt="Pose de bíceps vista desde atrás para mostrar el ángulo"
+        />
+        <img
+          src="../img/day12/3.4.jpg"
+          alt="Variación cerrada de bíceps en ángulo bajo"
+        />
+        <img
+          src="../img/day12/3.5.jpg"
+          alt="Contracción de bíceps con el codo delante del cuerpo"
+        />
+        <img
+          src="../img/day12/3.6.jpg"
+          alt="Contracción de bíceps con ligera rotación del torso"
+        />
+        <img
+          src="../img/day12/3.7.jpg"
+          alt="Contracción final de bíceps en ángulo medio"
+        />
+        <p>
+          Coloca un trozo de tela o un calcetín en la mano para mejorar el
+          agarre y activar el antebrazo. Desde ahí, flexiona el brazo en
+          diferentes ángulos y gira la muñeca hacia afuera (<em>supinación</em>)
+          para crear la máxima contracción del bíceps. Realiza poses isométricas
+          fuertes en varias posiciones: de frente, de lado, en ángulo bajo y con
+          el brazo más elevado.
+        </p>
+        <p>
+          Las tomas desde la espalda en el vídeo se utilizan solo para que el
+          espectador vea mejor la postura: no es obligatorio repetir exactamente
+          la misma pose de espaldas, basta con mantener la misma sensación de
+          tensión. Mantén cada contracción unos segundos, cambiando ligeramente
+          el ángulo en cada repetición, hasta completar
+          <strong>10 variaciones por cada brazo</strong>.
+        </p>
+      </section>
+
+      <!-- 4. Elevación frontal con silla en posición de “silla” -->
+      <section>
+        <h2>4. Elevación frontal con silla en posición de “silla”</h2>
+        <img
+          src="../img/day12/4.1.jpg"
+          alt="Elevación frontal de la silla con brazos extendidos"
+        />
+        <img
+          src="../img/day12/4.2.jpg"
+          alt="Elevación frontal de la silla en posición de semisentadilla"
+        />
+        <p>
+          Sujeta una silla por las patas y extiende los brazos completamente al
+          frente, a la altura del pecho o ligeramente por encima, manteniéndolos
+          rectos sin bloquear los codos. En la primera serie puedes mantener la
+          posición de pie, con el torso firme y el pecho abierto para sentir el
+          trabajo de la parte frontal de los hombros.
+        </p>
+        <p>
+          A partir de la segunda serie adopta la posición de
+          <em>“silla”</em>: flexiona las rodillas hasta formar un ángulo cercano
+          a 90&nbsp;grados, como si estuvieras sentado en una silla invisible, y
+          mantén la espalda totalmente recta. Desde esta postura sostiene la
+          silla al frente durante <strong>10&nbsp;segundos</strong>, evitando
+          que el peso te haga inclinarte hacia adelante o hacia atrás. Baja la
+          silla con control y repite el ciclo hasta completar
+          <strong>10 repeticiones</strong>.
+        </p>
+      </section>
+
+      <!-- 5. Tríceps isométrico con el brazo a 90 grados -->
+      <section>
+        <h2>5. Tríceps isométrico con el brazo a 90 grados</h2>
+        <img
+          src="../img/day12/5.1.jpg"
+          alt="Tríceps isométrico con el brazo a 90 grados empujando hacia abajo"
+        />
+        <p>
+          Flexiona el brazo de trabajo formando un ángulo cercano a
+          90&nbsp;grados y colócalo por encima de la mano de apoyo. La mano
+          inferior actúa como punto fijo y empuja hacia arriba, mientras el
+          brazo de trabajo intenta extenderse hacia abajo, creando una
+          contracción intensa del tríceps. Mantén la tensión máxima unos
+          segundos y repite
+          <strong>10 veces por cada brazo</strong>, cuidando que el hombro no se
+          eleve hacia la oreja.
+        </p>
+      </section>
+
+      <!-- 6. Fondos en banco para tríceps con pausa isométrica -->
+      <section>
+        <h2>6. Fondos en banco para tríceps con pausa isométrica</h2>
+        <img
+          src="../img/day12/6.1.jpg"
+          alt="Fondos en banco para tríceps con piernas extendidas"
+        />
+        <img
+          src="../img/day12/6.2.jpg"
+          alt="Posición alta de los fondos en banco con brazos casi extendidos"
+        />
+        <p>
+          Siéntate frente a un banco y apoya las manos en el borde con los dedos
+          mirando hacia adelante. Extiende las piernas al frente y eleva la
+          cadera para quedar en suspensión. Desciende flexionando los codos
+          hacia atrás y luego sube casi por completo, sin bloquearlos.
+        </p>
+        <p>
+          En la parte alta mantén una tensión fuerte durante
+          <strong>10&nbsp;segundos</strong>, con los hombros abajo y el pecho
+          abierto. Repite el ciclo <strong>10 veces</strong>, sin perder la
+          estabilidad del torso ni permitir que los hombros se cierren hacia
+          adelante.
+        </p>
+      </section>
+
+      <!-- 7. Isometría lateral para el dorsal ancho -->
+      <section>
+        <h2>7. Isometría lateral para el dorsal ancho</h2>
+        <img
+          src="../img/day12/7.1.jpg"
+          alt="Isometría lateral para el dorsal ancho con manos detrás de la cabeza"
+        />
+        <p>
+          Coloca las manos detrás de la cabeza con los codos bien abiertos.
+          Inclina el torso ligeramente hacia un lado sin girar las caderas ni el
+          pecho. Desde esta postura contrae con fuerza el dorsal ancho del lado
+          hacia el que te inclinas, mientras el lado contrario se estira de
+          forma natural.
+        </p>
+        <p>
+          Mantén la contracción unos segundos buscando el máximo acortamiento
+          muscular sin perder la verticalidad general del cuerpo. Vuelve al
+          centro y repite hacia el otro lado hasta completar
+          <strong>10 repeticiones por cada lado</strong>.
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
